version/0.31/_sources/api/solver/_autosummary/settings/interaction_1.rst.txt
:orphan:

.. _interaction_1:

interaction
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.interaction_1
    :show-inheritance:

.. rubric:: Attributes

==================================================   ===============================================================================

Attribute                                                                                                                    Summary

==================================================   ===============================================================================
:ref:`evaporating_species <evaporating_species>`         Help for this object class is not available without an instantiated object.

:ref:`continuous_phase <continuous_phase>`                                   The continuous phase that the injection interacts with.

:ref:`volume_displacement <volume_displacement_1>`       Help for this object class is not available without an instantiated object.

==================================================   ===============================================================================

.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`injections_child <injections_child>`       'child_object_type' of injections.

==========================================   ======================================

