version/0.38/_sources/api/solver/_autosummary/settings/interaction_1.rst.txt
:orphan:

.. _interaction_1:

interaction
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.interaction_1
    :show-inheritance:

.. rubric:: Attributes

==================================================   =================================================================================================

Attribute                                                                                                                                      Summary

==================================================   =================================================================================================
:ref:`evaporating_species <evaporating_species>`                   The component of the continuous phase mixture that forms as the droplet evaporates.

:ref:`evaporating_stream <evaporating_stream>`           The stream of the continuous phase PDF combustion model that forms as the droplet evaporates.

:ref:`continuous_phase <continuous_phase>`                                                     The continuous phase that the injection interacts with.

:ref:`volume_displacement <volume_displacement_1>`                                                            Lagrangian volume displacement settings.

==================================================   =================================================================================================

.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`injections_child <injections_child>`       'child_object_type' of injections.

==========================================   ======================================

